gcc-14.2.0/gcc/testsuite/gdc.test/compilable/named_arguments_auto_ref.d
version https://git-lfs.github.com/spec/v1
oid sha256:ba6d92d68fea7c556f927bd0e22ffc59a3d63eb9651f4aab8297b74e5c587080
size 1050
