gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/traits_initSymbol.d
version https://git-lfs.github.com/spec/v1
oid sha256:8f4f20097b2fab2a1837614eb2797c84358a0417daa86c0a2c9a922abc2a0f2f
size 1821
